# cisco_support

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: codeql-analysis.yml  publish-to-prod-pypi  publish-to-prod-pypi.yml  publish-to-test-pypi.yml
cisco_support/: __init__.py  __version__.py  automated_software_distribution.py  bug.py  case.py  eox.py  product_information.py  serial_number_information.py  service_order_return.py  software_suggestions.py  utils.py
src/cisco_support/: __init__.py  auth.py  automated_software_distribution.py  bug.py  case.py  eox.py  product_information.py  serial_number.py  service_order_return.py  software_suggestion.py
